--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@next/bundle-analyzer": "^15.4.5",
     "framer-motion": "^12.23.12",
     "next": "^15.3.1",
     "react": "^19.1.0",
